updated font and background

--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
             font-family: 'comic-andy';
             src: url("assets/Fonts/comic_andy.ttf");
         }
+        @font-face {
+            font-family: 'catacombs';
+            src: url("assets/Fonts/Catacombs\ V1-0.ttf");
+        }
 
         body {
-            background: url("assets/background-greenpink.jpg");
+            background: url("assets/background.jpg");
             /* background-position: center; */
             /* background-size: 100%; */
             color: #fff;
@@ -82,14 +86,14 @@
         } .buttons {
             font-weight: bolder;
             text-align: center;
-            font-size: 50px;
+            font-size: 60px;
             margin-top: 20px;
             /* margin-bottom: 18px; */
             margin-left: auto;
             margin-right: auto;
             /* padding: 20px; */
-            padding-top: 5px;
-            font-family: 'comic-andy';
+            padding-top: 15px;
+            font-family: 'catacombs';
             /* border: 1px solid rgb(131, 131, 131); */
             border-width: 2px;
             width: 75%;
